Various tweaks to avoid allocating many String and char[] objects when parsing preferences.